# py-rebar

./: pyproject.toml  readme.md
src/pyrebar/: __main__.py  application.py  plugins.py
src/pyrebar/apps/: example.py
src/pyrebar/utils/: logging.py  singleton_meta.py
src/tests/: test_application.py
